agregue componentes, funcione para importar las imagenes, y arregle estilos

--- a/src/components/Proyectos/proyectos.module.css
+++ b/src/components/Proyectos/proyectos.module.css
@@ -2,3 +2,14 @@
     color: white;
     margin: 32px 16px ;
 }
+
+.card_proyectos_contenedor{
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+
+.card_proyectos_contenedor a{
+    text-decoration: none;
+}
+
