--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,28 @@ body{
 
     display: flex;
     justify-content: center;
-    padding: 8px 8px;
+    
 
 }
 
-.grillas{
+/* .grillas{
     display: flex;
+    justify-content: center;
     position: fixed;
     z-index: 1;
     width: 100%;
     height: 100vh;
+    padding: 8px 8px;
 }
 
 .par{
     background-color: rgba(255, 0, 0, 0.2);
-    margin: 0 8px;
-    width: 72px;
+    margin: 0 8px 0 8px;
+    width: 22%;
 }
 
 .impar{
     background-color: rgba(114, 38, 185, 0.2);
-    margin: 0 8px;
-    width: 72px;
-}
+    margin: 0 8px 0 8px;
+    width: 22%;
+} */
