--- a/src/components/CardProyect/cardproyect.module.css
+++ b/src/components/CardProyect/cardproyect.module.css
@@ -1,29 +1,21 @@
-:root{
-
-    --primary-color: #092532; /* Fondo principal */
-    --secondary-color: #89C9B8;
-    --secondary-color-rgb: 137, 201, 184; /* Botones o tarjetas */
-    --tertiary-color: #C7E2B2; /* Detalles, bordes o íconos */
-    --quaternary-color: #E1FFC2; /* Texto principal o enlaces */
-   
-  }
 
 .contenedor_proyectos{
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-color: var(--secondary-color);
+    border: 3px solid var(--secondary-color);
     margin: 16px 0;
     padding: 16px 8px;
-    color: var(--primary-color);
+    color: var(--tertiary-color);
     border-radius: 5px;
-    box-shadow: 1px 1px 3px 2px var(--tertiary-color) ;
+    box-shadow: 1px 1px 3px 1px var(--secondary-color) ;
     height: 24vh;
     justify-content: space-around;
 }
 
-.contenedor_proyectos h4{
-    margin: 0 0 16px 0;
+.contenedor_proyectos h3{
+    color: var(--titulos-color);
+    margin: 0;
 }
 
 .contenedor_proyectos p{
