--- a/src/components/Hello/hello.module.css
+++ b/src/components/Hello/hello.module.css
@@ -1,12 +1,3 @@
-:root{
-
-    --primary-color: #092532; /* Fondo principal */
-    --secondary-color: #89C9B8;
-    --secondary-color-rgb: 137, 201, 184; /* Botones o tarjetas */
-    --tertiary-color: #C7E2B2; /* Detalles, bordes o íconos */
-    --quaternary-color: #E1FFC2; /* Texto principal o enlaces */
-   
-  }
 
 .contenedor_hello{
     margin: 56px 16px 0 16px;
@@ -16,13 +7,13 @@
 }
 
 .hellomessage{
-    color: white;
+    color: var(--titulos-color);
     font-family: 0.5rem;
 }
 
 .firstTittle{
 margin: 16px 0 8px 0;
-color: white;
+color: var(--titulos-color);
 
 }
 
