--- a/src/components/CardEducation/cardeducation.module.css
+++ b/src/components/CardEducation/cardeducation.module.css
@@ -14,9 +14,11 @@
 }
 
 .contenedor_info h3{
-   
+    font-size: 1rem;
     padding: 8px 0px;
 }
+
+
 
 .contenedor_imagen{
     display: flex;
@@ -24,6 +26,6 @@
 }
 
 .contenedor_imagen img{
-    width: 87px;
+    width: 70px;
 }
 
