modificando el popUp

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body{
 
 }
 
-/* .grillas{
+.grillas{
     display: flex;
     justify-content: center;
     position: fixed;
@@ -28,4 +28,4 @@ body{
     background-color: rgba(114, 38, 185, 0.2);
     margin: 0 8px 0 8px;
     width: 22%;
-} */
+}
