--- a/src/components/PopUp/PopUp.module.css
+++ b/src/components/PopUp/PopUp.module.css
@@ -1,48 +1,91 @@
-
-.contenedor_popUp{
-     display: flex;
+.contenedor_popUp {
+    display: flex;
     margin: 0;
-    position: fixed; 
+    position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); 
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    background-color: rgba(var(--secondary-color-rgb),0.5);
+    background-color: rgba(var(--secondary-color-rgb), 0.5);
     z-index: 3;
     align-items: center;
     justify-content: center;
     overflow: hidden;
 }
 
-.popUps{
+.popUps {
     display: flex;
     text-align: center;
     color: black;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     background-color: var(--primary-color);
     color: var(--quaternary-color);
     box-shadow: 2px 2px 2px var(--tertiary-color);
     border-radius: 5px;
-    width: 75%;
-    height: 35%;
-    max-width: 360px;
-    max-height: 195px; 
+    width: 80%;
+    height: 80%;
+    max-width: 540px;
     opacity: 1;
+    padding: 16px;
 }
 
-.btn_popup{
+
+.btn_popup {
 
     background-color: var(--secondary-color);
     color: var(--primary-color);
     padding: 10px;
     cursor: pointer;
     margin: 1px;
-    width: 35%;
+    width: 90%;
     font-weight: 700;
     border-radius: 5px;
 
 }
 
+.popups_close {
+    margin: 0 0 16px 0;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+}
+
+.popups_close a {
+    padding: 4px;
+    width: 44px;
+    font-size: 200%;
+}
+
+.popups_message h2 {
+    margin: 16px 0;
+    color: var(--primary-color);
+    background-color: var(--tertiary-color);
+    height: 35%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popups_message p {
+    margin: 16px 16px;
+}
+
+.popcard {
+    
+    width: 100%;
+    border: 2px solid rgba(var(--secondary-color-rgb), 0.5);
+    margin: 0 0 36px 0;
+    padding: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    color: var(--titulos-color)
+
+}
+
+.popcard_btns{
+
+}
