agregue boton popup y modifique los componentes y los estilos en horizontal

--- a/src/components/PopUp/PopUp.module.css
+++ b/src/components/PopUp/PopUp.module.css
@@ -142,3 +142,16 @@
     align-items: center;
     height: 44px;
 }
+
+@media(max-height: 420px){
+
+
+.contenedor_popUp {
+    overflow-y: scroll;
+}
+.popUps{
+    margin-top: 220px;
+
+}
+
+}
