--- a/src/components/Contacto/contacto.module.css
+++ b/src/components/Contacto/contacto.module.css
@@ -23,3 +23,9 @@
   text-decoration: none;
   background-color: var(--primary-color)
  }
+
+ .PopUp_btn{
+    display: flex;
+    justify-content: center;
+    text-decoration:underline
+ }
