--- a/src/components/Proyectos/proyectos.module.css
+++ b/src/components/Proyectos/proyectos.module.css
@@ -13,3 +13,16 @@
     text-decoration: none;
 }
 
+@media(min-width: 768px){
+
+    .card_proyectos_contenedor{
+        
+        display: grid;
+        grid-template-columns: 49% 49%;
+        gap: 16px;
+        
+    }
+
+
+
+}
